apps/octoprint/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: octoprint
  namespace: server
  labels:
    app.kubernetes.io/name: octoprint
    app.kubernetes.io/component: ingress
    app.kubernetes.io/part-of: server
spec:
  entryPoints:
    - websecure
  routes:
    - match: "Host(`octoprint.d-f.dev`)"
      kind: Rule
      services:
        - name: octo-print
          port: 80
      middlewares:
        - name: crowdsec
          namespace: server
        - name: authentik-auth
          namespace: server
  tls:
    certResolver: letsencrypt
